<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OKjsp</string>
    
    <!-- Menu strings -->
    <string name="action_settings">설정</string>
    <string name="action_browser">브라우저에서 보기</string>
    <string name="action_share">공유</string>
    <string name="action_share_to">공유&#8230;</string>
    
    <string name="desc_image_startup">OKJSP 첫 시작 화면</string>
    <string name="desc_image_left_menu">누르면 왼쪽 메뉴가 열립니다</string>

    <!-- Activity Main -->
    <string name="profile_default_username">로그인 전</string>
    <string name="profile_default_userinfo">누르면 로그인할 수 있습니다</string>
    
    <!-- Login Dialog -->
    <string name="login">로그인</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="hint_username">user id</string>
    <string name="hint_password">password</string>
    
    <!-- Pull to refresh strings -->
    <string name="pull_to_refresh_pull_label">Pull to refresh&#8230;</string>
    <string name="pull_to_refresh_release_label">Release to refresh&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Loading&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh&#8230;</string>
    
    <!-- Setting Preferences -->
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
     
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>    
</resources>